stateDiagram-v2
    [*] --> IDLE
    IDLE --> ALERT : fire_detected (severity != none)
    ALERT --> RESPONDING : dispatch_fire_units
    RESPONDING --> SUPPRESSING : units_arrived_on_scene
    RESPONDING --> IDLE : false_alarm
    SUPPRESSING --> RECOVERING : fire_contained
    RECOVERING --> IDLE : site_cleared

    %% Notes:
    %% - Fire events come from `event_logs.txt` (sensor reports).
    %% - Fields: severity, damage, fire_type, location, spread_rate, casualties
    %% - Rapid response triggered when spread_rate >= 5.0 m/min or damage >= 70
    %% - Suppression reduces damage by a simulated 20–60 points